# mass-renamer

./: .gitignore  Cargo.toml  help.md  readme.md
renameit-gui/: Cargo.toml
renameit-gui/src/: directory.rs  lib.rs
renameit-gui/src/gui/: table.rs
renameit-lib/: Cargo.toml
renameit-lib/src/: add.rs  case.rs  date.rs  error.rs  extension.rs  folder.rs  lib.rs  name.rs  number.rs  reg.rs  remove.rs  replace.rs
src/: add.rs  app.rs  case.rs  date.rs  directory.rs  extension.rs  file.rs  folder.rs  gui.rs  lib.rs  main.rs  name.rs  number.rs  reg.rs  remove.rs  renamer.rs  replace.rs  tester.rs
src/file/: add.rs  case.rs  case_options.rs  date.rs  directory.rs  extension.rs  folder.rs  name.rs  name_options.rs  number.rs  reg.rs  regex_options.rs  remove.rs  remove_options.rs  replace.rs  replace_options.rs
src/gui/: add.rs  case.rs  data.rs  date.rs  extension.rs  files.rs  folder.rs  increment_decrement.rs  name.rs  number.rs  reg.rs  remove.rs  replace.rs  valid_text.rs  validated.rs
src/renamer/: add.rs  case.rs  date.rs  directory.rs  extension.rs  folder.rs  name.rs  number.rs  reg.rs  remove.rs  renamer_builder.rs  replace.rs
