[package]
name = "bulk_file_renamer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
chrono = "0.4.20"
crossterm = "0.27.0"
eframe = "0.20.1"
egui = "0.20.1"
home = "0.5.4"
iced = "0.10.0"
regex = "1.6.0"
rfd = "0.10.0"
thiserror = "1.0.44"
tracing = "0.1.36"
tracing-subscriber = "0.3.16"
tui = "0.19.0"
