[package]
name = "mass_renamer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
home = "0.5.5"
regex = "1.10.2"
rfd = "0.12.1"
thiserror = "1.0.50"
