[package]
name = "renameit-gui"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
iced = "0.13"
strum = {version = "0.27", features = ["derive"]}
rfd = "0.15"
home = "0.5"
renameit-lib = {path="../renameit-lib"}
